--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Copper</h5>
                     <p class="card-text">100cp = 1gp</p>
-                    <input type="number" class="copper">
+                    <input type="number" class="copper" id="copper">
                 </div>
             </div>
 
@@ -25,7 +25,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Silver</h5>
                     <p class="card-text">10sp = 1gp</p>
-                    <input type="number" class="silver">
+                    <input type="number" class="silver" id="silver">
                 </div>
             </div>
 
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Electrum</h5>
                     <p class="card-text">2ep = 1gp</p>
-                    <input type="number" class="electrum">
+                    <input type="number" class="electrum" id="electrum">
                 </div>
             </div>
         </div>
@@ -43,17 +43,25 @@
                 <div class="card-body">
                     <h5 class="card-title">Gold</h5>
                     <p class="card-text">1gp</p>
-                    <input type="number" class="gold">
+                    <input type="number" class="gold" id="gold">
                 </div>
             </div>
 
-            <div class="card col-sm"></div>
+            
 
             <div class="card col-sm plat">
                 <div class="card-body">
                     <h5 class="card-title">Platinum</h5>
                     <p class="card-text">1pp = 10gp</p>
-                    <input type="number" class="platinum">
+                    <input type="number" class="platinum" id="platinum">
+                </div>
+            </div>
+
+            <div class="card col-sm party">
+                <div class="card-body">
+                    <h5 class="card-title">Party Size</h5>
+                    <p class="card-text">Enter your party size to share currency</p>
+                    <input type="number" class="partyNum" id="partyNum">
                 </div>
             </div>
         </div>
@@ -62,11 +70,14 @@
             Submit
         </button>
 
-        <div class="card">
+        <button type="button" class="btn btn-danger w-25">
+            Reset
+        </button>
+
+        <div class="card resultBox" id="results">
             <div class="card-body result">
                 <h5 class="card-title">Results</h5>
-                <p class="card-text resultBody"></p>
-                <input type="number" class="result">
+                <p class="card-text resultBody" id="resultBody"></p>
             </div>
         </div>
     </div>
@@ -129,5 +140,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="function.js"></script>
 </body>
 </html>
